--- a/src/app/productos/productos.component.html
+++ b/src/app/productos/productos.component.html
@@ -4,9 +4,9 @@
   <app-slider ></app-slider>
 
 
-  <div class="container my-2 text-left" *ngIf="authService.hasrole('ROLE_ADMIN')">
-    <button class="btn btn-success" routerLink="/productos/save">vender</button>
-    <button  type="button" [routerLink]="['/categorias/form']" name="button" class="btn btn-info mx-2 btn-social">Crear Categoria</button>
+  <div class="container my-2 text-left" >
+    <button *ngIf="authService.hasrole('ROLE_ADMIN')" class="btn btn-success" routerLink="/productos/form">Crear Producto</button>
+    <button *ngIf="authService.hasrole('ROLE_ADMIN')"  type="button" [routerLink]="['/categorias/form']" name="button" class="btn btn-info mx-2 btn-social">Crear Categoria</button>
   </div>
 
 
@@ -19,7 +19,7 @@
       <div class="col p-0 mt-3">
         <div class="product-title">
           <div class="d-flex align-items-center">
-            <h2 class="heading" >Todos nuestros productos al mejor precio</h2>
+            <h2 class="main-title" >Todos nuestros productos al mejor precio</h2>
           </div>
         </div>
       </div>
