--- a/src/app/compras/button-item-cantidad/button-item-cantidad.component.html
+++ b/src/app/compras/button-item-cantidad/button-item-cantidad.component.html
@@ -1,8 +1,8 @@
-<div class="py-2" *ngIf="!carritoService.existeItem(producto.id)">
+<div  *ngIf="!carritoService.existeItem(producto.id)">
   <button  class="btn btn-success btn-block" type="button" (click)="addToList(producto)">Agregar al carrito</button>
 </div>
-<div class="col py-2" *ngIf="carritoService.existeItem(producto.id)">
-  <div class="row" >
+<div  *ngIf="carritoService.existeItem(producto.id)">
+  <div class="row mx-2" >
     <div class="col-4 display-center">
       <button [disabled]="carritoService.getCantidadItem(producto.id)==1"  (click)="carritoService.disminuirCantidad(producto.id, carritoService.getCantidadItem(producto.id))" class="btn  btn-border btn-cantidad" type="button">
         <span class="fas fa-minus"></span>
