--- a/src/app/compras/listar-carrito/listar-carrito.component.css
+++ b/src/app/compras/listar-carrito/listar-carrito.component.css
@@ -34,7 +34,7 @@
 .text-price{
   color: #262626;
   font-weight: 600!important;
-  font-size: 1rem!important;
+  font-size: .805rem!important;
   line-height: 100%!important;
 }
 
