--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -9,6 +9,14 @@
 
 }
 
+.title{
+  color: #737373; 
+  font-weight: 600; 
+  font-size: 1.48rem; 
+  line-height: normal; 
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
 .main-header-category{
   background-color: #fff;
   color: #1f1f1f;
@@ -93,7 +101,7 @@ li{
 .nav-link{
   color: #7f7f7f!important;
   cursor: pointer;
-  font-size: .875rem!important;
+  font-size: .7975rem!important;
   font-style: normal!important;
     font-weight: 600!important;
     line-height: 100%!important;
