--- a/src/app/pagos/ckeckout.component.html
+++ b/src/app/pagos/ckeckout.component.html
@@ -201,7 +201,10 @@
                 <div class="dropdown-divider"></div>
                 <div class="row">
                   <div class="col-md-5 offset-md-7">
-                    <button class="btn btn-block btn-success "  [disabled]="facturaForm.form.invalid || !(carritoService.items.length>0)" (click)="createToken()">Finalizar Compra</button>
+                    <button *ngIf="checkPaypal" class="btn btn-block btn-success "  [disabled]="facturaForm.form.invalid || !(carritoService.items.length>0)" 
+                      (click)="createToken()">Finalizar Compra</button>
+                    <button *ngIf="check" class="btn btn-block btn-success "  [disabled]="facturaForm.form.invalid || !(carritoService.items.length>0)" 
+                      (click)="create()">Finalizar Compra</button>
                   </div>
               </div>
               </div>
