--- a/src/app/productos/listar-producto/listar-producto.component.html
+++ b/src/app/productos/listar-producto/listar-producto.component.html
@@ -7,30 +7,42 @@
 
         >
       <ng-template  swiperSlide *ngFor="let producto of productos">
-        <div class="card card-product product mx-2 " style=" border: none;  padding: 0; margin-bottom: 33px;"  *ngIf="productos?.length > 0" >
-          <div class="card-header" *ngIf="authService.hasrole('ROLE_ADMIN')">
-            <button  type="button" name="button" [routerLink]="['/productos/save', producto.id]"
-               class="btn  text-warning  mx-1 " style="border-radius:50%;"><i class="far fa-edit"></i></button>
-            <button  type="button" name="button" (click)="abrirModal(producto)"
-               class="btn  text-muted mx-1" style="border-radius:50%;"><i class="fas fa-camera"></i></button>
-            <button  type="button" name="button" (click)="delete(producto)"
-              class="btn text-danger mx-1"><i class="fas fa-trash-alt"></i></button>
-          </div>
-          <section>
-            <div (click)="abrirModal(producto)"  style="width: 100%; min-height: 160px; cursor: pointer;">
-              <img  *ngIf="producto?.imagen" class="img-fluid" style="vertical-align: middle;
-              border-style: none; width: 100%; "
-              src="{{urlBackend}}/api/uploads/img/{{producto.imagen}}" >
+        <div class="card card-product product mx-2 " style=" border: none; margin-bottom: 33px; padding: 10px;"  *ngIf="productos?.length > 0" >
+          <button *ngIf="authService.hasrole('ROLE_ADMIN')" mat-icon-button [matMenuTriggerFor]="menu" aria-label="Example icon-button with a menu" class="btn-menu" >
+            <mat-icon>more_vert</mat-icon>
+          </button>
+          <mat-menu #menu="matMenu">
+            <button mat-menu-item [routerLink]="['/productos/form', producto.id]">
+              <mat-icon>edit</mat-icon>
+              <span>Editar</span>
+            </button>
+            <button mat-menu-item (click)="abrirModal(producto)">
+              <mat-icon>camera_enhance</mat-icon>
+              <span>Subir Imagen</span>
+            </button>
+            <button mat-menu-item (click)="delete(producto)">
+              <mat-icon>delete_outline</mat-icon>
+              <span>Eliminar</span>
+            </button>
+          </mat-menu>
 
-              <img  *ngIf="!producto?.imagen" class=" img-fluid" height="160"
-              src="{{urlBackend}}/images/not-image.png" alt="sin imagen" >
+          <section>
+            <div (click)="abrirModal(producto)"  style="height: 232px; display: flex; justify-content: center; align-items: center;">
+              <div style="padding: 14.5%;">
+                <img  *ngIf="producto?.imagen" class="img-fluid" style="vertical-align: middle;
+                border-style: none; width: 100%; "
+                src="{{urlBackend}}/api/uploads/img/{{producto.imagen}}" >
+
+                <img  *ngIf="!producto?.imagen" class=" img-fluid" height="160"
+                src="{{urlBackend}}/images/not-image-cuadrado.png" alt="sin imagen" >
+              </div>
+              
             </div>
           </section>
           <section style="padding: 5px 10px 5px;">
-            <div class="product-contenido" style="color: greenyellow;"><i class="fas fa-user"></i>&nbsp;{{producto.usuario.nombre}} {{producto.usuario.apellido}}</div>
             <div class="product-contenido">{{producto.descripcion}}</div>
-            <div class="product-name" style="white-space: pre;">{{producto.nombre.toUpperCase()}}</div>
-            <div class="price-content">{{producto.precio | currency : 'S/' }}</div>
+            <div class="product-name text">{{producto.nombre}}</div>
+            <div class="price-content my-2">{{producto.precio | currency : 'S/' }}</div>
             <app-button-item-cantidad [producto]="producto"></app-button-item-cantidad>
           </section>
 
