--- a/src/app/pagos/ckeckout.component.css
+++ b/src/app/pagos/ckeckout.component.css
@@ -99,3 +99,22 @@
   color: #16a2ff;
   font-weight: 500;
 }
+
+.scroll::-webkit-scrollbar {
+  width: 0.8em;
+}
+
+.scroll::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
+}
+
+.scroll::-webkit-scrollbar-thumb {
+  background-color: gainsboro;
+  outline: 1px solid slategrey;
+  outline: none;
+  border-radius: 25px;
+}
+
+.scroll::-webkit-scrollbar-thumb:hover{
+  background-color: rgb(175, 175, 175);
+}
