--- a/src/styles.css
+++ b/src/styles.css
@@ -25,7 +25,7 @@ body{
   background-color: #f2f2f2!important;
   /*background-color: #1b2838!important;*/
   height: 100%;
-  
+
 }
 
 .swiper-button-prev.swiper-button-disabled, .swiper-button-next.swiper-button-disabled {
@@ -49,7 +49,13 @@ body{
 
 }
 
+.mat-form-field-infix{
+  width: 100%!important;
+}
 
+.mat-form-field-appearance-outline .mat-form-field-wrapper{
+  margin: 0px!important;
+}
 
 .input:focus{
   border: 1px solid #16a2ff;
@@ -75,12 +81,18 @@ body::-webkit-scrollbar {
 }
 
 body::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
 }
 
 body::-webkit-scrollbar-thumb {
-  background-color: darkgrey;
+  background-color: gainsboro;
   outline: 1px solid slategrey;
+  outline: none;
+  border-radius: 25px;
+}
+
+body::-webkit-scrollbar-thumb:hover{
+  background-color: rgb(175, 175, 175);
 }
 
 
